src/test/deca/syntax/invalid/float_int.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    float int x;
}